src/hypro/parser/antlr4-cif/ExpressionsParser.cpp

// Generated from Expressions.g4 by ANTLR 4.7


#include "ExpressionsVisitor.h"

#include "ExpressionsParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExpressionsParser::ExpressionsParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExpressionsParser::~ExpressionsParser() {
  delete _interpreter;
}

std::string ExpressionsParser::getGrammarFileName() const {
  return "Expressions.g4";
}

const std::vector<std::string>& ExpressionsParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExpressionsParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ExpressionsContext ------------------------------------------------------------------

ExpressionsParser::ExpressionsContext::ExpressionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpressionsParser::ExpressionContext *> ExpressionsParser::ExpressionsContext::expression() {
  return getRuleContexts<ExpressionsParser::ExpressionContext>();
}

ExpressionsParser::ExpressionContext* ExpressionsParser::ExpressionsContext::expression(size_t i) {
  return getRuleContext<ExpressionsParser::ExpressionContext>(i);
}


size_t ExpressionsParser::ExpressionsContext::getRuleIndex() const {
  return ExpressionsParser::RuleExpressions;
}

antlrcpp::Any ExpressionsParser::ExpressionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitExpressions(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::ExpressionsContext* ExpressionsParser::expressions() {
  ExpressionsContext *_localctx = _tracker.createInstance<ExpressionsContext>(_ctx, getState());
  enterRule(_localctx, 0, ExpressionsParser::RuleExpressions);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    expression();
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExpressionsParser::T__0) {
      setState(57);
      match(ExpressionsParser::T__0);
      setState(58);
      expression();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptExpressionContext ------------------------------------------------------------------

ExpressionsParser::OptExpressionContext::OptExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExpressionsParser::ExpressionContext* ExpressionsParser::OptExpressionContext::expression() {
  return getRuleContext<ExpressionsParser::ExpressionContext>(0);
}


size_t ExpressionsParser::OptExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleOptExpression;
}

antlrcpp::Any ExpressionsParser::OptExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitOptExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::OptExpressionContext* ExpressionsParser::optExpression() {
  OptExpressionContext *_localctx = _tracker.createInstance<OptExpressionContext>(_ctx, getState());
  enterRule(_localctx, 2, ExpressionsParser::RuleOptExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExpressionsParser::T__5)
      | (1ULL << ExpressionsParser::T__13)
      | (1ULL << ExpressionsParser::T__14)
      | (1ULL << ExpressionsParser::T__19)
      | (1ULL << ExpressionsParser::T__20)
      | (1ULL << ExpressionsParser::T__21)
      | (1ULL << ExpressionsParser::T__23)
      | (1ULL << ExpressionsParser::T__26)
      | (1ULL << ExpressionsParser::T__27)
      | (1ULL << ExpressionsParser::T__28)
      | (1ULL << ExpressionsParser::T__29)
      | (1ULL << ExpressionsParser::T__31)
      | (1ULL << ExpressionsParser::T__34)
      | (1ULL << ExpressionsParser::T__36)
      | (1ULL << ExpressionsParser::T__37)
      | (1ULL << ExpressionsParser::T__54)
      | (1ULL << ExpressionsParser::T__55)
      | (1ULL << ExpressionsParser::T__56)
      | (1ULL << ExpressionsParser::T__57)
      | (1ULL << ExpressionsParser::T__58)
      | (1ULL << ExpressionsParser::T__59)
      | (1ULL << ExpressionsParser::T__60)
      | (1ULL << ExpressionsParser::T__61)
      | (1ULL << ExpressionsParser::T__62))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (ExpressionsParser::T__63 - 64))
      | (1ULL << (ExpressionsParser::T__64 - 64))
      | (1ULL << (ExpressionsParser::T__65 - 64))
      | (1ULL << (ExpressionsParser::T__66 - 64))
      | (1ULL << (ExpressionsParser::T__67 - 64))
      | (1ULL << (ExpressionsParser::T__68 - 64))
      | (1ULL << (ExpressionsParser::T__69 - 64))
      | (1ULL << (ExpressionsParser::T__70 - 64))
      | (1ULL << (ExpressionsParser::T__71 - 64))
      | (1ULL << (ExpressionsParser::T__72 - 64))
      | (1ULL << (ExpressionsParser::T__73 - 64))
      | (1ULL << (ExpressionsParser::T__74 - 64))
      | (1ULL << (ExpressionsParser::T__75 - 64))
      | (1ULL << (ExpressionsParser::T__76 - 64))
      | (1ULL << (ExpressionsParser::T__77 - 64))
      | (1ULL << (ExpressionsParser::T__78 - 64))
      | (1ULL << (ExpressionsParser::T__79 - 64))
      | (1ULL << (ExpressionsParser::T__80 - 64))
      | (1ULL << (ExpressionsParser::T__81 - 64))
      | (1ULL << (ExpressionsParser::T__82 - 64))
      | (1ULL << (ExpressionsParser::T__83 - 64))
      | (1ULL << (ExpressionsParser::T__84 - 64))
      | (1ULL << (ExpressionsParser::T__85 - 64))
      | (1ULL << (ExpressionsParser::NUMBER - 64))
      | (1ULL << (ExpressionsParser::REALNUBER - 64))
      | (1ULL << (ExpressionsParser::STRING - 64))
      | (1ULL << (ExpressionsParser::IDENTIFIER - 64))
      | (1ULL << (ExpressionsParser::RELATIVENAME - 64))
      | (1ULL << (ExpressionsParser::ABSOLUTENAME - 64))
      | (1ULL << (ExpressionsParser::ROOTNAME - 64)))) != 0)) {
      setState(64);
      expression();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

ExpressionsParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpressionsParser::OrExpressionContext *> ExpressionsParser::ExpressionContext::orExpression() {
  return getRuleContexts<ExpressionsParser::OrExpressionContext>();
}

ExpressionsParser::OrExpressionContext* ExpressionsParser::ExpressionContext::orExpression(size_t i) {
  return getRuleContext<ExpressionsParser::OrExpressionContext>(i);
}


size_t ExpressionsParser::ExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleExpression;
}

antlrcpp::Any ExpressionsParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::ExpressionContext* ExpressionsParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 4, ExpressionsParser::RuleExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(67);
      orExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      orExpression();
      setState(69);
      match(ExpressionsParser::T__1);
      setState(70);
      orExpression();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(72);
      orExpression();
      setState(73);
      match(ExpressionsParser::T__2);
      setState(74);
      orExpression();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OrExpressionContext ------------------------------------------------------------------

ExpressionsParser::OrExpressionContext::OrExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpressionsParser::AndExpressionContext *> ExpressionsParser::OrExpressionContext::andExpression() {
  return getRuleContexts<ExpressionsParser::AndExpressionContext>();
}

ExpressionsParser::AndExpressionContext* ExpressionsParser::OrExpressionContext::andExpression(size_t i) {
  return getRuleContext<ExpressionsParser::AndExpressionContext>(i);
}


size_t ExpressionsParser::OrExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleOrExpression;
}

antlrcpp::Any ExpressionsParser::OrExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitOrExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::OrExpressionContext* ExpressionsParser::orExpression() {
  OrExpressionContext *_localctx = _tracker.createInstance<OrExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, ExpressionsParser::RuleOrExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    andExpression();
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExpressionsParser::T__3) {
      setState(79);
      match(ExpressionsParser::T__3);
      setState(80);
      andExpression();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AndExpressionContext ------------------------------------------------------------------

ExpressionsParser::AndExpressionContext::AndExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpressionsParser::CompareExpressionContext *> ExpressionsParser::AndExpressionContext::compareExpression() {
  return getRuleContexts<ExpressionsParser::CompareExpressionContext>();
}

ExpressionsParser::CompareExpressionContext* ExpressionsParser::AndExpressionContext::compareExpression(size_t i) {
  return getRuleContext<ExpressionsParser::CompareExpressionContext>(i);
}


size_t ExpressionsParser::AndExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleAndExpression;
}

antlrcpp::Any ExpressionsParser::AndExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitAndExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::AndExpressionContext* ExpressionsParser::andExpression() {
  AndExpressionContext *_localctx = _tracker.createInstance<AndExpressionContext>(_ctx, getState());
  enterRule(_localctx, 8, ExpressionsParser::RuleAndExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    compareExpression();
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExpressionsParser::T__4) {
      setState(87);
      match(ExpressionsParser::T__4);
      setState(88);
      compareExpression();
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompareExpressionContext ------------------------------------------------------------------

ExpressionsParser::CompareExpressionContext::CompareExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpressionsParser::AddExpressionContext *> ExpressionsParser::CompareExpressionContext::addExpression() {
  return getRuleContexts<ExpressionsParser::AddExpressionContext>();
}

ExpressionsParser::AddExpressionContext* ExpressionsParser::CompareExpressionContext::addExpression(size_t i) {
  return getRuleContext<ExpressionsParser::AddExpressionContext>(i);
}


size_t ExpressionsParser::CompareExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleCompareExpression;
}

antlrcpp::Any ExpressionsParser::CompareExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitCompareExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::CompareExpressionContext* ExpressionsParser::compareExpression() {
  CompareExpressionContext *_localctx = _tracker.createInstance<CompareExpressionContext>(_ctx, getState());
  enterRule(_localctx, 10, ExpressionsParser::RuleCompareExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(94);
    addExpression();
    setState(99);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(95);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << ExpressionsParser::T__5)
          | (1ULL << ExpressionsParser::T__6)
          | (1ULL << ExpressionsParser::T__7)
          | (1ULL << ExpressionsParser::T__8)
          | (1ULL << ExpressionsParser::T__9)
          | (1ULL << ExpressionsParser::T__10)
          | (1ULL << ExpressionsParser::T__11)
          | (1ULL << ExpressionsParser::T__12))) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(96);
        addExpression(); 
      }
      setState(101);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddExpressionContext ------------------------------------------------------------------

ExpressionsParser::AddExpressionContext::AddExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpressionsParser::MulExpressionContext *> ExpressionsParser::AddExpressionContext::mulExpression() {
  return getRuleContexts<ExpressionsParser::MulExpressionContext>();
}

ExpressionsParser::MulExpressionContext* ExpressionsParser::AddExpressionContext::mulExpression(size_t i) {
  return getRuleContext<ExpressionsParser::MulExpressionContext>(i);
}


size_t ExpressionsParser::AddExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleAddExpression;
}

antlrcpp::Any ExpressionsParser::AddExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitAddExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::AddExpressionContext* ExpressionsParser::addExpression() {
  AddExpressionContext *_localctx = _tracker.createInstance<AddExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, ExpressionsParser::RuleAddExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(102);
    mulExpression();
    setState(107);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(103);
        _la = _input->LA(1);
        if (!(_la == ExpressionsParser::T__13

        || _la == ExpressionsParser::T__14)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(104);
        mulExpression(); 
      }
      setState(109);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MulExpressionContext ------------------------------------------------------------------

ExpressionsParser::MulExpressionContext::MulExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpressionsParser::UnaryExpressionContext *> ExpressionsParser::MulExpressionContext::unaryExpression() {
  return getRuleContexts<ExpressionsParser::UnaryExpressionContext>();
}

ExpressionsParser::UnaryExpressionContext* ExpressionsParser::MulExpressionContext::unaryExpression(size_t i) {
  return getRuleContext<ExpressionsParser::UnaryExpressionContext>(i);
}


size_t ExpressionsParser::MulExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleMulExpression;
}

antlrcpp::Any ExpressionsParser::MulExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitMulExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::MulExpressionContext* ExpressionsParser::mulExpression() {
  MulExpressionContext *_localctx = _tracker.createInstance<MulExpressionContext>(_ctx, getState());
  enterRule(_localctx, 14, ExpressionsParser::RuleMulExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    unaryExpression();
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExpressionsParser::T__15)
      | (1ULL << ExpressionsParser::T__16)
      | (1ULL << ExpressionsParser::T__17)
      | (1ULL << ExpressionsParser::T__18))) != 0)) {
      setState(111);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << ExpressionsParser::T__15)
        | (1ULL << ExpressionsParser::T__16)
        | (1ULL << ExpressionsParser::T__17)
        | (1ULL << ExpressionsParser::T__18))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(112);
      unaryExpression();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryExpressionContext ------------------------------------------------------------------

ExpressionsParser::UnaryExpressionContext::UnaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExpressionsParser::FuncExpressionContext* ExpressionsParser::UnaryExpressionContext::funcExpression() {
  return getRuleContext<ExpressionsParser::FuncExpressionContext>(0);
}

ExpressionsParser::UnaryExpressionContext* ExpressionsParser::UnaryExpressionContext::unaryExpression() {
  return getRuleContext<ExpressionsParser::UnaryExpressionContext>(0);
}


size_t ExpressionsParser::UnaryExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleUnaryExpression;
}

antlrcpp::Any ExpressionsParser::UnaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitUnaryExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::UnaryExpressionContext* ExpressionsParser::unaryExpression() {
  UnaryExpressionContext *_localctx = _tracker.createInstance<UnaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, ExpressionsParser::RuleUnaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(127);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExpressionsParser::T__5:
      case ExpressionsParser::T__21:
      case ExpressionsParser::T__23:
      case ExpressionsParser::T__26:
      case ExpressionsParser::T__27:
      case ExpressionsParser::T__28:
      case ExpressionsParser::T__29:
      case ExpressionsParser::T__31:
      case ExpressionsParser::T__34:
      case ExpressionsParser::T__36:
      case ExpressionsParser::T__37:
      case ExpressionsParser::T__54:
      case ExpressionsParser::T__55:
      case ExpressionsParser::T__56:
      case ExpressionsParser::T__57:
      case ExpressionsParser::T__58:
      case ExpressionsParser::T__59:
      case ExpressionsParser::T__60:
      case ExpressionsParser::T__61:
      case ExpressionsParser::T__62:
      case ExpressionsParser::T__63:
      case ExpressionsParser::T__64:
      case ExpressionsParser::T__65:
      case ExpressionsParser::T__66:
      case ExpressionsParser::T__67:
      case ExpressionsParser::T__68:
      case ExpressionsParser::T__69:
      case ExpressionsParser::T__70:
      case ExpressionsParser::T__71:
      case ExpressionsParser::T__72:
      case ExpressionsParser::T__73:
      case ExpressionsParser::T__74:
      case ExpressionsParser::T__75:
      case ExpressionsParser::T__76:
      case ExpressionsParser::T__77:
      case ExpressionsParser::T__78:
      case ExpressionsParser::T__79:
      case ExpressionsParser::T__80:
      case ExpressionsParser::T__81:
      case ExpressionsParser::T__82:
      case ExpressionsParser::T__83:
      case ExpressionsParser::T__84:
      case ExpressionsParser::T__85:
      case ExpressionsParser::NUMBER:
      case ExpressionsParser::REALNUBER:
      case ExpressionsParser::STRING:
      case ExpressionsParser::IDENTIFIER:
      case ExpressionsParser::RELATIVENAME:
      case ExpressionsParser::ABSOLUTENAME:
      case ExpressionsParser::ROOTNAME: {
        enterOuterAlt(_localctx, 1);
        setState(118);
        funcExpression();
        break;
      }

      case ExpressionsParser::T__14: {
        enterOuterAlt(_localctx, 2);
        setState(119);
        match(ExpressionsParser::T__14);
        setState(120);
        unaryExpression();
        break;
      }

      case ExpressionsParser::T__13: {
        enterOuterAlt(_localctx, 3);
        setState(121);
        match(ExpressionsParser::T__13);
        setState(122);
        unaryExpression();
        break;
      }

      case ExpressionsParser::T__19: {
        enterOuterAlt(_localctx, 4);
        setState(123);
        match(ExpressionsParser::T__19);
        setState(124);
        unaryExpression();
        break;
      }

      case ExpressionsParser::T__20: {
        enterOuterAlt(_localctx, 5);
        setState(125);
        match(ExpressionsParser::T__20);
        setState(126);
        unaryExpression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncExpressionContext ------------------------------------------------------------------

ExpressionsParser::FuncExpressionContext::FuncExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExpressionsParser::ExpressionFactorContext* ExpressionsParser::FuncExpressionContext::expressionFactor() {
  return getRuleContext<ExpressionsParser::ExpressionFactorContext>(0);
}

ExpressionsParser::StdLibFunctionContext* ExpressionsParser::FuncExpressionContext::stdLibFunction() {
  return getRuleContext<ExpressionsParser::StdLibFunctionContext>(0);
}

std::vector<ExpressionsParser::ExpressionsContext *> ExpressionsParser::FuncExpressionContext::expressions() {
  return getRuleContexts<ExpressionsParser::ExpressionsContext>();
}

ExpressionsParser::ExpressionsContext* ExpressionsParser::FuncExpressionContext::expressions(size_t i) {
  return getRuleContext<ExpressionsParser::ExpressionsContext>(i);
}

std::vector<ExpressionsParser::OptExpressionContext *> ExpressionsParser::FuncExpressionContext::optExpression() {
  return getRuleContexts<ExpressionsParser::OptExpressionContext>();
}

ExpressionsParser::OptExpressionContext* ExpressionsParser::FuncExpressionContext::optExpression(size_t i) {
  return getRuleContext<ExpressionsParser::OptExpressionContext>(i);
}


size_t ExpressionsParser::FuncExpressionContext::getRuleIndex() const {
  return ExpressionsParser::RuleFuncExpression;
}

antlrcpp::Any ExpressionsParser::FuncExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExpressionsVisitor*>(visitor))
    return parserVisitor->visitFuncExpression(this);
  else
    return visitor->visitChildren(this);
}

ExpressionsParser::FuncExpressionContext* ExpressionsParser::funcExpression() {
  FuncExpressionContext *_localctx = _tracker.createInstance<FuncExpressionContext>(_ctx, getState());
  enterRule(_localctx, 18, ExpressionsParser::RuleFuncExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(139);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(129);
      expressionFactor();
      break;
    }

    case 2: {
      setState(130);
      stdLibFunction();
      setState(131);
      match(ExpressionsParser::T__21);
      setState(132);
      match(ExpressionsParser::T__22);
      break;
    }

    case 3: {
      setState(134);
      stdLibFunction();
      setState(135);
      match(ExpressionsParser::T__21);
      setState(136);
      expressions();
      setState(137);
      match(ExpressionsParser::T__22);
      break;
    }

    }
    setState(159);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(157);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
        case 1: {
          setState(141);
          match(ExpressionsParser::T__23);
          setState(142);
          expressions();
          setState(143);
          match(ExpressionsParser::T__24);
          break;
        }

        case 2: {
          setState(145);
          match(ExpressionsParser::T__23);
          setState(146);
          optExpression();
          setState(147);
          match(ExpressionsParser::T__25);
          setState(148);
          optExpression();
          setState(149);
          match(ExpressionsParser::T__24);
          break;
        }

        case 3: {
          setState(151);
          match(ExpressionsParser::T__21);
          setState(152);
          match(ExpressionsParser::T__22);
          break;
        }

        case 4: {
          setState(153);
          match(ExpressionsParser::T__21);
          setState(154);
          expressions();
          setState(155);
          match(ExpressionsParser::T__22);
          break;
        }

        } 
      }
      setState(161);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
